@@ -1,0 +1,50 @@
+% Generated by roxygen2: do not edit by hand
+% Please edit documentation in R/functions-XCMSnExp.R
+\name{chromPeakSpectra}
+\alias{chromPeakSpectra}
+\title{Extract (MS2) spectra associated with chromatographic peaks}
+\usage{
+chromPeakSpectra(x, msLevel = 2L, expandRt = 0, expandMz = 0,
+  ppm = 0, method = c("all", "closest_rt", "closest_mz", "signal"),
+  skipFilled = FALSE)
+}
+\arguments{
+\item{x}{`XCMSnExp` object with identified chromatographic peaks.}
+
+\item{msLevel}{`integer(1)` defining whether MS1 or MS2 spectra should be
+returned. Currently only `msLevel = 2` is supported.}
+
+\item{expandRt}{`numeric(1)` to expand the retention time range of each
+peak by a constant value on each side.}
+
+\item{expandMz}{`numeric(1)` to expand the m/z range of each peak by a
+constant value on each side.}
+
+\item{ppm}{`numeric(1)` to expand the m/z range of each peak (on each side)
+by a value dependent on the peak's m/z.}
+
+\item{method}{`character(1)` specifying which MS2 spectra should be included.
+Defaults to `"all"` in which all MS2 spectra within the rt and m/z range
+of a chromatographic peak are returned. `"closest_rt"` returns the one
+MS2 spectrum with the retention time closest to the chromatographic
+peak's apex rt. `"closest_mz"` returns the MS2 spectrum with the
+precursor m/z closest to the chromatographic peak's m/z. `"signal"`
+returns the MS2 spectrum which total signal is closest to the
+chromatographic peak's maximal signal (`"maxo"`).}
+
+\item{skipFilled}{`logical(1)` whether no spectra for filled-in peaks should
+be reported.}
+}
+\value{
+`list` of `list`s that are either of length 0 or contain
+    `Spectrum2` object(s) within the m/z-rt range. The length of the list
+    matches the number of peaks.
+}
+\description{
+Extract (MS2) spectra from an `XCMSnExp` object that represent ions within
+the rt and m/z range defined by each chromatographic peak (in the same file
+/sample in which the peak was detected).
+}
+\author{
+Johannes Rainer
+}
