@@ -1,0 +1,53 @@
+% Generated by roxygen2: do not edit by hand
+% Please edit documentation in R/functions-XCMSnExp.R
+\name{featureSpectra}
+\alias{featureSpectra}
+\title{Extract (MS2) spectra associated with features}
+\usage{
+featureSpectra(x, msLevel = 2, expandRt = 0, expandMz = 0, ppm = 0,
+  skipFilled = FALSE, ...)
+}
+\arguments{
+\item{x}{\link{XCMSnExp} object with feature defitions available.}
+
+\item{msLevel}{`integer(1)` defining whether MS1 or MS2 spectra should be
+returned. Currently only `msLevel = 2` is supported.}
+
+\item{expandRt}{`numeric(1)` to expand the retention time range of each
+peak by a constant value on each side.}
+
+\item{expandMz}{`numeric(1)` to expand the m/z range of each peak by a
+constant value on each side.}
+
+\item{ppm}{`numeric(1)` to expand the m/z range of each peak (on each side)
+by a value dependent on the peak's m/z.}
+
+\item{skipFilled}{`logical(1)` whether no spectra for filled-in peaks should
+be reported.}
+
+\item{...}{additional arguments to be passed along to \code{\link[=chromPeakSpectra]{chromPeakSpectra()}},
+such as \code{method}.}
+}
+\value{
+A \code{list}, same length than there are
+features in \code{x}, each element being a \code{list} of \linkS4class{Spectrum2}
+objects with the MS2 spectra that potentially represent ions measured
+by each chromatographic peak associated with the feature, or \code{NULL}
+if none present.
+}
+\description{
+Return MS2 spectra for all chromatographic peaks associated with the features
+in \code{x}.
+}
+\details{
+The function identifies all MS2 spectra with their precursor m/z within the
+m/z range as well as their retention time within the rt range of each
+chromatographic peak associated with the feature.
+
+The optional parameter \code{method} allows to ensure that for each
+chromatographic peak in one sample only one MS2 spectrum is returned.
+See \link{chromPeakSpectra} for more details.
+}
+\author{
+Johannes Rainer
+}
