@@ -208,3 +208,21 @@ test_that("exportMetaboAnalyst works", {
     colnames(res3) <- colnames(res)
     expect_equal(as.matrix(res3), res)
 })
+
+test_that("chromPeakSpectra works", {
+    ## For now we don't have MS1/MS2 data, so we have to stick to errors etc.
+    expect_error(ms2_spectra_for_peaks(xod_x, method = "other"))
+    expect_error(res <- chromPeakSpectra(od_x))
+    expect_warning(res <- chromPeakSpectra(xod_x))
+    expect_true(length(res) == nrow(chromPeaks(xod_x)))
+    expect_equal(names(res), rownames(chromPeaks(xod_x)))
+})
+
+test_that("featureSpectra works", {
+    ## For now we don't have MS1/MS2 data, so we have to stick to errors etc.
+    expect_error(ms2_spectra_for_features(xod_x, method = "other"))
+    expect_error(res <- featureSpectra(xod_x))
+    expect_warning(res <- featureSpectra(xod_xg))
+    expect_true(length(res) == nrow(featureDefinitions(xod_xg)))
+    expect_equal(names(res), rownames(featureDefinitions(xod_xg)))
+})
